[package]
name = "rust-token"
version = "0.1.0"
authors = ["Bruno Ricci <brricci@orange.fr>"]
edition = "2018"



[[bin]]
name = "partial_test"
path = "src/bin/partial_test.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
reqwest = { version ="0.11.2", features = ["json", "stream", "serde_json"] }
serde_json =  "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
tokio = { version = "1", features = ["full"] }